--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header class="main-header">
-            <h1>Shino Aburame - Anime Tracker 🦋</h1>
+            <h1>Shino Aburame - Anime Tracker 🍃</h1>
             <button id="theme-toggle" title="Toggle theme">☀️</button>
         </header>
         <div class="search-container">
